# PersonControlFinance

./: .env.example  .gitignore  PLANO_EXECUCAO.md  README.md  TASK_PENDENCIAS.md  _plan_raw.txt  docker-compose.yml  pendencias.md  render.yaml  saas_task_board.html  vercel.json
.claude/: launch.json  settings.local.json
.github/workflows/: ci.yml  deploy.yml
api/: index.py  requirements.txt
backend/: Dockerfile  SETP_MULTITENANT_EXAMPLE.py  alembic.ini  fincontrol_dev.db  init_db.py  pyproject.toml  report.xml  setup_admin_supabase.py  test_out.txt  test_out_cmd.txt  test_out_pytest.txt
backend/app/: main.py
backend/app/api/v1/: accounts.py  admin.py  ai_assistant.py  audit.py  auth.py  billing.py  bills.py  cashflow.py  categories.py  dashboard.py  goals.py  invoices.py  networth.py  notifications.py  open_finance.py  projection.py  recurrences.py  router.py  transactions.py  webhooks.py
backend/app/core/: config.py  deps.py  plan_guard.py  plan_limits.py  security.py  tenant_context.py  tenant_middleware.py
backend/app/db/: session.py
backend/app/integrations/: pluggy_client.py
backend/app/models/: __init__.py  account.py  audit_log.py  base.py  category.py  goal.py  invoice.py  notification.py  plan.py  recurrence.py  tenant.py  transaction.py  user.py  webhook_log.py
backend/app/schemas/: account.py  ai_assistant.py  audit.py  auth.py  billing.py  cashflow.py  category.py  goal.py  invoice.py  notification.py  pluggy.py  recurrence.py  transaction.py  user.py
backend/app/services/: account_service.py  ai_service.py  audit_service.py  auth_service.py  billing_service.py  cashflow_service.py  categorization_service.py  category_service.py  email_service.py  export_service.py  goal_service.py  invoice_service.py  networth_service.py  notification_service.py  patrimony_service.py  pluggy_client.py  pluggy_sync_service.py  projection_service.py  recurrence_service.py  transaction_service.py
backend/app/workers/: celery_app.py  tasks.py
backend/fincontrol_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0001_initial_schema.py  0002_webhook_logs.py  001_initial_schema.py  002_tenant_indexes.py  003_rls_policies.py
backend/tests/: conftest.py  test_accounts.py  test_admin.py  test_ai_assistant.py  test_audit.py  test_auth.py  test_billing.py  test_cashflow.py  test_categories.py  test_categorization.py  test_email_service.py  test_goals.py  test_health.py  test_invoices.py  test_networth.py  test_notifications.py  test_open_finance.py  test_plan_limits.py  test_projection.py  test_recurrences.py  test_tasks.py  test_tenant_isolation.py  test_transactions.py  test_webhooks.py
frontend/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json
frontend/.github/workflows/: ci.yml
frontend/backend/: MULTITENANT_RLS.md  alembic.ini
frontend/backend/tests/: test_accounts.py  test_bills.py  test_dashboard.py  test_rls_isolation.py  test_transactions.py  test_webhooks.py
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: providers.tsx
frontend/src/hooks/: index.ts  use-accounts.ts  use-auth.ts  use-billing.ts  use-bills.ts  use-categories.ts  use-dashboard.ts  use-goals.ts  use-open-finance.ts  use-patrimony.ts  use-projections.ts  (+2 more)
infra/: ecs-task.tf  locations.conf  main.tf  nginx.conf  outputs.tf  terraform.tfvars.example
(+72 files in other folders)
